--- a/FireResistance.Web/Views/FireResistance/Index.cshtml
+++ b/FireResistance.Web/Views/FireResistance/Index.cshtml
@@ -1,19 +1,85 @@
-﻿
-@{
-    ViewData["Title"] = "Index";
-}
+﻿@model string []
+
 
 <div class="text-center">
     <button class="btn btn-outline-secondary filter-button" data-filter="@*@obj.Name.Replace(" ", "_")*@">
-        первый
+        Отдельно стоящая колонна при 4-х стороннем огневом воздействии
     </button>
     <button class="btn btn-outline-secondary filter-button" data-filter="@*@obj.Name.Replace(" ", "_")*@">
-        второй
+        Плита перекрытия сплошного сечения с жестким опиранием на колонны при огневом воздействии снизу
     </button>
     <button class="btn btn-outline-secondary filter-button" data-filter="@*@obj.Name.Replace(" ", "_")*@">
-        третий
+        Плита перекрытия сплошного сечения с жестким опиранием на стены при огневом воздействии снизу
     </button>
 </div>
+
+
+<form method="post">
+    <div class="border p-3">
+        <partial name="~/Views/FireResistance/PartialViews/_FireResistanceValue.cshtml" />
+        <partial name="~/Views/FireResistance/PartialViews/_FixationElementValue.cshtml" />
+        <partial name="~/Views/FireResistance/PartialViews/_ArmatureClassValue.cshtml" />
+        <partial name="~/Views/FireResistance/PartialViews/_ConcreteTypeValue.cshtml" />
+        <partial name="~/Views/FireResistance/PartialViews/_ConcreteClassValue.cshtml" />
+        <div class="border p-1">
+            <label>Укажите длину элемента:</label><br />
+            <input type="number" name="LengthColumn" value=5450 />
+        </div>
+        <div class="border p-1">
+            <label>Укажите высоту элемента:</label><br />
+            <input type="number" name="HeighColumn" value=1200 />
+        </div>
+            <div class="border p-1">
+            <label>Укажите ширину элемента:</label><br />
+            <input type="number" name="WidthColumn" value=300 />
+        </div>
+        <div class="border p-1">
+            <label>Укажите расстояние от грани элемента до центра тяжести арматуры:</label><br />
+            <input type="number" name="ArmatureInstallationDepth" value=55 />
+        </div>
+        <partial name="~/Views/FireResistance/PartialViews/_ArmatureDiameterValue.cshtml" />
+        <div class="border p-1">
+            <label>Укажите количество арматуры:</label><br />
+            <input type="number" name="ArmatureCount" value=3 />
+        </div>
+        <div class="border p-1">
+            <label>Укажите вличену изгибающего момента от постоянной и длительной нормативной нагрузки:</label><br />
+            <input type="number" name="Moment" value=10 />
+        </div>
+        <div class="border p-1">
+            <label>Укажите вличену нормальной силы от постоянной и длительной нормативной нагрузки:</label><br />
+            <input type="number" name="Strength" value=300 />
+        </div>
+        <input type="submit" value="Send" />
+    </div>
+</form>
+
+<div class="border p-3">
+@if (Model != null)
+{
+    foreach (string str in Model)
+    {
+        if (str.StartsWith("#"))
+        {
+            string text = str.Replace("#", "");
+            <h2>@text</h2>
+        }
+        else if (!str.StartsWith("\t"))
+        {
+            <strong>
+                @str
+            </strong>
+        }
+        else
+        {
+            <p>@str</p>
+        }
+
+    }
+}
+</div>
+
+
 
 @*<div class="container">
     <div class="text-center">
