--- a/FireResistance.Web/Views/_ViewImports.cshtml
+++ b/FireResistance.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using FireResistance.Web
 @using FireResistance.Web.Models
+@using FireResistance.Core.Entities.SourceDataForCalculation
+@using FireResistance.Core.Data
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
