--- a/FireResistance.Web/Views/Shared/PartialViews/_ConcreteTypeValue.cshtml
+++ b/FireResistance.Web/Views/Shared/PartialViews/_ConcreteTypeValue.cshtml
@@ -1,10 +1,12 @@
-﻿<div class="border p-1">
+﻿@inject NameColumns nameColumns
+
+<div class="border p-1">
     <div class="col-4">
         <label for="ConcreteType">Выберите вид бетона:</label>
     </div>
     <div class="col-4">
         <select name="ConcreteType" size="1" class="form-control-sm">
-            @foreach (string value in NameColumns.ConcreteType)
+            @foreach (string value in nameColumns.ConcreteType)
             {
                 <option value="@value">@value</option>
             }
