--- a/FireResistance.Web/Views/Shared/PartialViews/_FireResistanceValue.cshtml
+++ b/FireResistance.Web/Views/Shared/PartialViews/_FireResistanceValue.cshtml
@@ -1,11 +1,12 @@
-﻿
+﻿@inject NameColumns nameColumns
+
 <div class="border p-1">
     <div class="col-4">
     <label for="FireResistanceValue">Выберете требуемый предел огнестойкости:</label>
     </div>
     <div class="col-4">
         <select name="FireResistanceValue" size="1" class="form-control-sm">
-        @foreach(string value in NameColumns.FireResistanceForCriticalTemperature)
+        @foreach(string value in nameColumns.FireResistanceForCriticalTemperature)
         {
             <option value="@value">@value</option>
         }
