--- a/FireResistance.Web/Views/Shared/PartialViews/_ArmatureClassValue.cshtml
+++ b/FireResistance.Web/Views/Shared/PartialViews/_ArmatureClassValue.cshtml
@@ -1,10 +1,12 @@
-﻿<div class="border p-1">
+﻿@inject NameColumns nameColumns
+
+<div class="border p-1">
     <div class="col-4">
         <label for="ArmatureClass">Выберите класс арматуры по прочности:</label>
     </div>
     <div class="col-4">
         <select name="ArmatureClass" size="1" class="form-control-sm">
-            @foreach (string value in NameColumns.ArmatureClass)
+            @foreach (string value in nameColumns.ArmatureClass)
             {
                 <option value=@value>@value</option>
             }
