--- a/FireResistance.Web/Views/Shared/_Layout.cshtml
+++ b/FireResistance.Web/Views/Shared/_Layout.cshtml
@@ -31,18 +31,26 @@
                     <partial name="_LoginPartial" />*@
                     
                     <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Main" asp-action="Index">Главная страница</a>
-                            <a class="nav-link" asp-area="" asp-controller="FireResistance" asp-action="Index">Расчет огнестойкости</a>
-                            <a class="nav-link" asp-area="" asp-controller="Info" asp-action="Index">Об авторе</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Проверка предела огнестойкости</a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" asp-area="" asp-controller="FireResistance" asp-action="ColumnFireFourSide">Колонна подверженная огневому <br>воздействию с 4 сторон</br></a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" asp-area="" asp-controller="FireResistance" asp-action="PlateWithRigidConnectionToColumns">Плита перекрытия с жестким <br>опиранием на колонны</br></a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" asp-area="" asp-controller="FireResistance" asp-action="PlateWithRigidConnectionToColumns">Плита перекрытия с жестким <br>опиранием на стены</br></a>
+                                @*<li><hr class="dropdown-divider"></li>*@
+                            </div>
+                        </li>
                     </ul>
-                    
-                </div>
-            @*</div>*@
+             </div>
         </nav>
     </header>
     <div class="container mb-4 pb-4">
         <main role="main" class="pb-3">
-            @*<partial name="_Notifications" />*@
             @RenderBody()
         </main>
     </div>
