--- a/FireResistance.Web/Views/_ViewImports.cshtml
+++ b/FireResistance.Web/Views/_ViewImports.cshtml
@@ -1,5 +1,8 @@
 ﻿@using FireResistance.Web
 @using FireResistance.Web.Models
+@using FireResistance.Web.Models.ViewModels
 @using FireResistance.Core.Entities.SourceDataForCalculation
 @using FireResistance.Core.Data
+@using FireResistance.Core.Entities.SourceDataForCalculation.AbstractClasses
+@using FireResistance.Core.Entities.SourceDataForCalculation.SourceDataBasic
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
